--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /vendor/
 /.phpintel
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
