--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -5,6 +5,10 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+        api_keys:
+            apiKey:
+                name: Authorization
+                type: header
     title: 'Kaherecode API'
     description: 'An aspiring community for developers. A place to learn and share about programming.'
     version: '1.0.0'
