Enable cors for frontend URL

--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ APP_SECRET=c2dd70f2c9091f2ff9c780c8eb5e85e7
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+FRONTEND_URL=
 ###< nelmio/cors-bundle ###
 
 ###> doctrine/doctrine-bundle ###
