--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "lexik/jwt-authentication-bundle": "^2.6",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
+        "symfony/event-dispatcher": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
         "symfony/messenger": "5.0.*",
