--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,7 +25,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    kaherecode_api.event.authentication_success_listener:
-        class: App\EventListener\AuthenticationSuccessListener
+
+    kaherecode_api.event.jwt_created_listener:
+        class: App\EventListener\JWTCreatedListener
         tags:
-            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: onAuthenticationSuccessResponse }
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
