--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/messenger": "5.1.*",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "5.1.*",
         "symfony/string": "5.1.*",
